add corrections for errors detected by w3 validator

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </div>
       </header>
       <article>
+        <h2 hidden>HEADER</h2>
         <section id="by-dennis">
           <h3>By <span>Dennis Overbye</span></h3>
           <div>
@@ -91,7 +92,8 @@
             </p>
           </div>
         </section>
-        <section id="as-big-as-it-gets">
+        <section class="as-big-as-it-gets">
+          <h3 hidden>SECTION HEADING</h3>
           <div class="content">
             <p>
               On Monday, Dr. Guth’s starship came in. Radio astronomers reported
@@ -132,7 +134,7 @@
             </p>
           </div>
         </section>
-        <section id="as-big-as-it-gets">
+        <section class="as-big-as-it-gets">
           <h3><span>As Big as It Gets</span></h3>
           <div class="content">
             <p>
@@ -577,7 +579,7 @@
         <div>
           <div class="image-wrap">
             <img src="./assets/images/more-2.jpg" alt="more" />
-            <span>Agence France-Presse â Getty Images</span>
+            <span>Agence France-Presse @ Getty Images</span>
           </div>
           <h2>
             Israel’s Beresheet Lunar Lander Moves Into Moon Orbit and starts
@@ -778,43 +780,49 @@
         <div id="subscribe">
           <h3>SUBSCRIBE</h3>
           <div id="sub-top">
-            <li>
-              <img
-                src="./assets/images/sub-home-delivery.png"
-                alt="Home delivery subscription"
-              />
-              Home Delivery
-            </li>
-            <li>
-              <img
-                src="./assets/images/sub-digital-sub.png"
-                alt="Digital subscription"
-              />
-              Digital Subscriptions
-            </li>
-            <li>
-              <img
-                src="./assets/images/sub-crossword.png"
-                alt="Crossword subscription"
-              />
-              Crossword
-            </li>
-            <li>
-              <img
-                src="./assets/images/sub-cooking.png"
-                alt="Cooking subscription"
-              />
-              Cooking
-            </li>
+            <ul>
+              <li>
+                <img
+                  src="./assets/images/sub-home-delivery.png"
+                  alt="Home delivery subscription"
+                />
+                Home Delivery
+              </li>
+              <li>
+                <img
+                  src="./assets/images/sub-digital-sub.png"
+                  alt="Digital subscription"
+                />
+                Digital Subscriptions
+              </li>
+              <li>
+                <img
+                  src="./assets/images/sub-crossword.png"
+                  alt="Crossword subscription"
+                />
+                Crossword
+              </li>
+              <li>
+                <img
+                  src="./assets/images/sub-cooking.png"
+                  alt="Cooking subscription"
+                />
+                Cooking
+              </li>
+            </ul>
           </div>
           <div id="sub-mid">
-            <li>Email Newsletter</li>
-            <li>Corporate Subscriptions</li>
-            <li>Education Rate</li>
+            <ul>
+              <li>Email Newsletter</li>
+              <li>Corporate Subscriptions</li>
+              <li>Education Rate</li>
+            </ul>
           </div>
           <div id="sub-bottom">
-            <li>Mobile Applications</li>
-            <li>Replica Edition</li>
+            <ul>
+              <li>Mobile Applications</li>
+              <li>Replica Edition</li>
+            </ul>
           </div>
         </div>
       </div>
