add corrections from code review

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   </head>
   <body>
     <nav>
-      <div id="menu"><i class="fas fa-bars"></i></div>
-      <div id="search"><i class="fas fa-search"></i></div>
-      <div id="brand"><a href="">SPACE & COSMOS</a></div>
-      <div id="banner">
+      <div class="menu"><i class="fas fa-bars"></i></div>
+      <div class="search"><i class="fas fa-search"></i></div>
+      <div class="brand"><a href="">SPACE & COSMOS</a></div>
+      <div class="banner">
         <img src="./assets/banner/NYT-banner.png" alt="brand banner" />
       </div>
-      <button id="subscribe-btn">SUBSCRIBE</button>
-      <button id="login-btn">LOG IN</button>
+      <button class="subscribe-btn">SUBSCRIBE</button>
+      <button class="login-btn">LOG IN</button>
     </nav>
     <main>
       <header>
@@ -699,7 +699,7 @@
         <a href="/">Go to Home Page »</a>
       </div>
       <div id="other-links">
-        <div id="news">
+        <div class="footer-item">
           <h3>NEWS</h3>
           <ul>
             <li><a href="#">Home Page</a></li>
@@ -716,7 +716,7 @@
             <li><a href="#">Corrections</a></li>
           </ul>
         </div>
-        <div id="opinion">
+        <div class="footer-item">
           <h3>OPINION</h3>
           <ul>
             <li><a href="#">Today's Opinion</a></li>
@@ -728,7 +728,7 @@
             <li><a href="#">Video: Opinion</a></li>
           </ul>
         </div>
-        <div id="arts">
+        <div class="footer-item">
           <h3>ARTS</h3>
           <ul>
             <li><a href="#">Today's Arts</a></li>
@@ -743,7 +743,7 @@
             <li><a href="#">Video: Arts</a></li>
           </ul>
         </div>
-        <div id="living">
+        <div class="footer-item">
           <h3>LIVING</h3>
           <ul>
             <li><a href="#">Automobiles</a></li>
@@ -760,7 +760,7 @@
             <li><a href="#">Weddings</a></li>
           </ul>
         </div>
-        <div id="more">
+        <div class="footer-item">
           <h3>MORE</h3>
           <ul>
             <li><a href="#">Reader Center</a></li>
@@ -777,9 +777,9 @@
             <li><a href="#">Manage My Account</a></li>
           </ul>
         </div>
-        <div id="subscribe">
+        <div class="subscribe footer-item">
           <h3>SUBSCRIBE</h3>
-          <div id="sub-top">
+          <div class="sub-top">
             <ul>
               <li>
                 <img
@@ -811,14 +811,14 @@
               </li>
             </ul>
           </div>
-          <div id="sub-mid">
+          <div class="sub-mid">
             <ul>
               <li>Email Newsletter</li>
               <li>Corporate Subscriptions</li>
               <li>Education Rate</li>
             </ul>
           </div>
-          <div id="sub-bottom">
+          <div class="sub-bottom">
             <ul>
               <li>Mobile Applications</li>
               <li>Replica Edition</li>
@@ -826,7 +826,7 @@
           </div>
         </div>
       </div>
-      <div id="copyright">
+      <div class="copyright">
         <a href="#">© 2019 The New York Times Company</a>
         <a href="#">Contact Us</a>
         <a href="#">Work with us</a>
