fix theory-of-inflation section

--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
               </p>
             </div>
           </div>
+          <div class="clear-float"></div>
           <hr />
           <p>By LARRY BUCHANAN and JONATHAN CORUM</p>
           <div class="content">
